"chore: Atualiza endpoints para user-roles
