# internal/api/router/user-roles.go
@@ -7,31 +7,31 @@ import (
 
 var userRoleRoutes = []Route{
 	{
-		URI:         "/users/roles",
+		URI:         "/user-roles",
 		Method:      http.MethodGet,
 		HandlerFunc: controllers.GetUserRoles,
 		RequireAuth: true,
 	},
 	{
-		URI:         "/users/roles/:id",
+		URI:         "/user-roles/:id",
 		Method:      http.MethodGet,
 		HandlerFunc: controllers.GetUserRole,
 		RequireAuth: true,
 	},
 	{
-		URI:         "/users/roles",
+		URI:         "/user-roles",
 		Method:      http.MethodPost,
 		HandlerFunc: controllers.CreateUserRole,
 		RequireAuth: true,
 	},
 	{
-		URI:         "/users/roles/:id",
+		URI:         "/user-roles/:id",
 		Method:      http.MethodPut,
 		HandlerFunc: controllers.UpdateUserRole,
 		RequireAuth: true,
 	},
 	{
-		URI:         "/users/roles/:id",
+		URI:         "/user-roles/:id",
 		Method:      http.MethodDelete,
 		HandlerFunc: controllers.DeleteUserRole,
 		RequireAuth: true,
